# navio_ros

./: CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.a5889fe  README  README.md  package.xml
action/: CmdAngle.action  StartStopControl.action
include/lib/: AHRS.hpp  DynSys.cpp  DynSys.h  Encoder.cpp  Encoder.h  SamplingTime.cpp  SamplingTime.h  Sensors.cpp  Sensors.h  ode.cpp  ode.h  pid.h  rotor.h
include/lib/mynavio/: mynavio.cpp  mynavio.h  mynavio.pro
include/lib/old/: complementary_filter.cpp  complementary_filter.h
include/testbed_navio/: basic.h  basic_ros_node.cpp  basic_ros_node.h  navio_basic.h  navio_interface.cpp  navio_interface.h  ros_node.cpp  ros_node.h  ros_node_basic.h  ros_node_full.cpp  ros_node_full.h  testbed.h  testbed_demo.h  testbed_full.h  variables.h
include/testbed_navio/old/: ros_node_basic.cpp  ros_node_full.cpp  ros_node_full.h  testbed.hpp  testbed_basic.h
launch/: demo.launch  tracking_control.launch
parm/: control_parameter.yaml  control_parameter.yml
src/: basic.cpp  calibration.cpp  control_gyro.cpp  control_test.cpp  control_tracking  control_tracking.cpp  demo.cpp  demo.cpp.autosave  ident.cpp  navio_basic.cpp  navio_control_roll_servo.cpp  pid.cpp  regulator.cpp  repeter.cpp  rotor.h  sensors_calibrartions.cpp  testbed_basic.cpp  testbed_basic_adaptive.cpp  testbed_basic_tracking.cpp  testbed_full.cpp  tracking.cpp
src/old/: control_gyro.cpp  control_tracking.cpp  testbed_basic.cpp  testbed_basic_adaptive.cpp  testbed_full.cpp
utilities/: Makefile  a.out  motor_calibration  motor_calibration.cpp
